--- a/fe/src/app/employee/user-profile/user-profile.component.html
+++ b/fe/src/app/employee/user-profile/user-profile.component.html
@@ -1,16 +1,17 @@
-<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 100px;">
+  <!-- background-image: url(assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top; -->
   <!-- Mask -->
-  <span class="mask bg-gradient-danger opacity-8" style="height: 80px;"></span>
+  <span class="mask bg-gradient-danger opacity-8" style="height: 100px;"></span>
   <!-- Header container -->
 </div>
-<div class="container-fluid mt--7">
+<div class="container-fluid" style="margin-top: 0rem !important">
   <div class="row">
     <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
       <div class="card card-profile shadow">
         <div class="row justify-content-center">
           <div class="col-lg-3 order-lg-2">
             <div class="card-profile-image">
-              <a href="javascript:void(0)">
+              <a href="">
                 <img src="assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
               </a>
             </div>
@@ -18,23 +19,23 @@
         </div>
         <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
           <div class="d-flex justify-content-between">
-            
+
           </div>
         </div>
         <div class="card-body pt-0 pt-md-4">
           <div class="row">
             <div class="col">
-              <div class="card-profile-stats d-flex justify-content-center mt-md-5">
+              <div class="card-profile-stats d-flex justify-content-center">
                 <div>
-                  <span class="heading">2</span>
+                  <span class="heading">{{ activityYear }}</span>
                   <span class="description">Năm làm</span>
                 </div>
                 <div>
-                  <span class="heading">22</span>
+                  <span class="heading">{{ ratingNumber }}</span>
                   <span class="description">Số dịch vụ</span>
                 </div>
                 <div>
-                  <span class="heading">9.0</span>
+                  <span class="heading">{{ averageRating }}</span>
                   <span class="description">Đánh giá</span>
                 </div>
               </div>
@@ -42,12 +43,13 @@
           </div>
           <div class="text-center">
             <h3>
-              Các bài đánh giá và phản hồi<span class="font-weight-light">22</span>
+              Các bài đánh giá và phản hồi <span class="font-weight-light">({{ ratingNumber }})</span>
             </h3>
             <hr class="my-4" />
             <div class="star-rating" [innerHTML]="generateStarRating(averageRating)"></div>
-            <p>Làm việc tích cực, nhanh gọn và sạch sẽ. Thái độ chuyên nghiệp và tỉ mỉ. Rất hài lòng.</p>
-            <a (click)="showMore(cleanerId)">Xem thêm</a>
+            <p>{{review}}</p>
+            <a style="text-decoration: none; color: #5e72e4; background-color: transparent; cursor: pointer;"
+              (click)="showMore(cleanerId)">Xem thêm</a>
           </div>
         </div>
       </div>
@@ -57,88 +59,98 @@
         <div class="card-header bg-white border-0">
           <div class="row align-items-center">
             <div class="col-8">
-              <h3 class="mb-0">My account</h3>
+              <h3 class="mb-0">{{name}}</h3>
             </div>
             <div class="col-4 text-right">
-              <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+              <a href="/history" class="btn btn-sm btn-primary">Lịch sử dịch vụ</a>
             </div>
           </div>
         </div>
         <div class="card-body">
           <form>
-            <h6 class="heading-small text-muted mb-4">User information</h6>
+            <h6 class="heading-small text-muted mb-4">Thông tin người dùng</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-username">Username</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                    <label class="form-control-label" for="input-username">Họ và tên</label>
+                    <input type="text" id="input-username" class="form-control form-control-alternative"
+                      placeholder="Nguyen Van A" value="{{name}}" [(ngModel)]="name">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-email">Email address</label>
-                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
+                    <label class="form-control-label" for="input-email">Email</label>
+                    <input type="email" id="input-email" class="form-control form-control-alternative"
+                      placeholder="abc@example.com" value="{{email}}" [(ngModel)]="email">
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
+                    <label class="form-control-label" for="input-first-name">Ngày sinh</label>
+                    <input type="text" id="dob" class="form-control form-control-alternative" placeholder="01/01/2020"
+                      value="{{dob}}" [(ngModel)]="dob">
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-3">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                    <label class="form-control-label" for="input-last-name">Giới tính</label>
+                    <input type="text" id="gender" class="form-control form-control-alternative" placeholder="Last name"
+                      value="Jesse">
+                  </div>
+                </div>
+
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-last-name" style="font-size: 16px;">Năm làm việc:
+                      {{activityYear}}</label>
                   </div>
                 </div>
               </div>
             </div>
             <hr class="my-4" />
             <!-- Address -->
-            <h6 class="heading-small text-muted mb-4">Contact information</h6>
+            <h6 class="heading-small text-muted mb-4">Thông tin liên hệ</h6>
             <div class="pl-lg-4">
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-9">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-address">Address</label>
-                    <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
+                    <label class="form-control-label" for="input-address">Địa chỉ</label>
+                    <input id="input-address" class="form-control form-control-alternative"
+                      placeholder="Số 1 Kim Mã, Hà Nội" value="{{address}}" [(ngModel)]="address" type="text">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-4">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-city">City</label>
-                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
+                    <label class="form-control-label" for="input-country">Chi nhánh làm việc</label>
+                    <input type="text" id="input-branch" class="form-control form-control-alternative"
+                      placeholder="Ha Noi">
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-country">Country</label>
-                    <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-country">Postal code</label>
-                    <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
+                    <label class="form-control-label" for="input-country">Số điện thoại</label>
+                    <input type="number" id="input-phone" class="form-control form-control-alternative"
+                      placeholder="0987654321" value="{{phoneNumber}}" [(ngModel)]="phoneNumber">
                   </div>
                 </div>
               </div>
             </div>
-            <hr class="my-4" />
-            <!-- Description -->
-            <h6 class="heading-small text-muted mb-4">About me</h6>
+            <!-- <hr class="my-4" />
+            <h6 class="heading-small text-muted mb-4">Giới thiệu</h6>
             <div class="pl-lg-4">
               <div class="form-group">
-                <label>About Me</label>
-                <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
+                <label>Sở thích</label>
+                <textarea rows="4" class="form-control form-control-alternative"
+                  placeholder="A few words about you ..."></textarea>
               </div>
-            </div>
+            </div> -->
           </form>
         </div>
       </div>
