--- a/fe/src/app/employee/tables.component.scss
+++ b/fe/src/app/employee/tables.component.scss
@@ -28,15 +28,18 @@
   background-color: #fff;
   background-clip: border-box;
 }
-.card > hr {
+
+.card>hr {
   margin-right: 0;
   margin-left: 0;
 }
-.card > .list-group:first-child .list-group-item:first-child {
+
+.card>.list-group:first-child .list-group-item:first-child {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
 }
-.card > .list-group:last-child .list-group-item:last-child {
+
+.card>.list-group:last-child .list-group-item:last-child {
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
 }
@@ -64,7 +67,7 @@
   text-decoration: none;
 }
 
-.card-link + .card-link {
+.card-link+.card-link {
   margin-left: 1.5rem;
 }
 
@@ -75,10 +78,12 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   background-color: #fff;
 }
+
 .card-header:first-child {
   border-radius: calc(0.375rem - 1px) calc(0.375rem - 1px) 0 0;
 }
-.card-header + .list-group .list-group-item:first-child {
+
+.card-header+.list-group .list-group-item:first-child {
   border-top: 0;
 }
 
@@ -88,6 +93,7 @@
   border-top: 1px solid rgba(0, 0, 0, 0.05);
   background-color: #fff;
 }
+
 .card-footer:last-child {
   border-radius: 0 0 calc(0.375rem - 1px) calc(0.375rem - 1px);
 }
@@ -139,9 +145,11 @@
   display: flex;
   flex-direction: column;
 }
+
 .card-deck .card {
   margin-bottom: 15px;
 }
+
 @media (min-width: 576px) {
   .card-deck {
     margin-right: -15px;
@@ -149,6 +157,7 @@
 
     flex-flow: row wrap;
   }
+
   .card-deck .card {
     display: flex;
     flex-direction: column;
@@ -165,67 +174,82 @@
   display: flex;
   flex-direction: column;
 }
-.card-group > .card {
+
+.card-group>.card {
   margin-bottom: 15px;
 }
+
 @media (min-width: 576px) {
   .card-group {
     flex-flow: row wrap;
   }
-  .card-group > .card {
+
+  .card-group>.card {
     margin-bottom: 0;
 
     flex: 1 0;
   }
-  .card-group > .card + .card {
+
+  .card-group>.card+.card {
     margin-left: 0;
 
     border-left: 0;
   }
-  .card-group > .card:first-child {
+
+  .card-group>.card:first-child {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
-  .card-group > .card:first-child .card-img-top,
-  .card-group > .card:first-child .card-header {
+
+  .card-group>.card:first-child .card-img-top,
+  .card-group>.card:first-child .card-header {
     border-top-right-radius: 0;
   }
-  .card-group > .card:first-child .card-img-bottom,
-  .card-group > .card:first-child .card-footer {
+
+  .card-group>.card:first-child .card-img-bottom,
+  .card-group>.card:first-child .card-footer {
     border-bottom-right-radius: 0;
   }
-  .card-group > .card:last-child {
+
+  .card-group>.card:last-child {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
-  .card-group > .card:last-child .card-img-top,
-  .card-group > .card:last-child .card-header {
+
+  .card-group>.card:last-child .card-img-top,
+  .card-group>.card:last-child .card-header {
     border-top-left-radius: 0;
   }
-  .card-group > .card:last-child .card-img-bottom,
-  .card-group > .card:last-child .card-footer {
+
+  .card-group>.card:last-child .card-img-bottom,
+  .card-group>.card:last-child .card-footer {
     border-bottom-left-radius: 0;
   }
-  .card-group > .card:only-child {
+
+  .card-group>.card:only-child {
     border-radius: 0.375rem;
   }
-  .card-group > .card:only-child .card-img-top,
-  .card-group > .card:only-child .card-header {
+
+  .card-group>.card:only-child .card-img-top,
+  .card-group>.card:only-child .card-header {
     border-top-left-radius: 0.375rem;
     border-top-right-radius: 0.375rem;
   }
-  .card-group > .card:only-child .card-img-bottom,
-  .card-group > .card:only-child .card-footer {
+
+  .card-group>.card:only-child .card-img-bottom,
+  .card-group>.card:only-child .card-footer {
     border-bottom-right-radius: 0.375rem;
     border-bottom-left-radius: 0.375rem;
   }
-  .card-group > .card:not(:first-child):not(:last-child):not(:only-child) {
+
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) {
     border-radius: 0;
   }
-  .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-img-top,
-  .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-img-bottom,
-  .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-header,
-  .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-footer {
+
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-img-top,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-img-bottom,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-header,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-footer {
     border-radius: 0;
   }
 }
@@ -241,6 +265,7 @@
     orphans: 1;
     widows: 1;
   }
+
   .card-columns .card {
     display: inline-block;
 
@@ -1252,6 +1277,97 @@
   margin-left: auto !important;
 }
 
+.badge {
+  text-transform: uppercase;
+}
+
+.badge a {
+  color: #fff;
+}
+
+.badge-md {
+  padding: .65em 1em;
+}
+
+.badge-lg {
+  padding: .85em 1.375em;
+}
+
+.badge-inline {
+  margin-right: .625rem;
+}
+
+.badge-inline+span {
+  position: relative;
+  top: 2px;
+}
+
+.badge-inline+span>a {
+  text-decoration: underline;
+}
+
+.btn .badge:not(:first-child) {
+  margin-left: .5rem;
+}
+
+.btn .badge:not(:last-child) {
+  margin-right: .5rem;
+}
+
+.badge-circle {
+  font-size: .875rem;
+
+  display: inline-flex;
+
+  width: 2rem;
+  height: 2rem;
+
+  text-align: center;
+
+  border-radius: 50%;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.badge-dot {
+  font-size: .875rem;
+  font-weight: 400;
+
+  padding-right: 0;
+  padding-left: 0;
+
+  text-transform: none;
+
+  background: transparent;
+}
+
+.badge-dot strong {
+  color: #32325d;
+}
+
+.badge-dot i {
+  display: inline-block;
+
+  width: .375rem;
+  height: .375rem;
+  margin-right: .375rem;
+
+  vertical-align: middle;
+
+  border-radius: 50%;
+}
+
+.badge-dot.badge-md i {
+  width: .5rem;
+  height: .5rem;
+}
+
+.badge-dot.badge-lg i {
+  width: .625rem;
+  height: .625rem;
+}
+
 .font14 {
   font-size: 14px;
 }
@@ -1268,7 +1384,8 @@
 .search-name {
   width: 30%;
   margin-right: 10px;
-  input{
+
+  input {
     height: 25px;
   }
 }
@@ -1278,30 +1395,32 @@
   margin-right: 10px;
 }
 
-.search-emp{
+.search-emp {
   display: flex;
-  h5{
+
+  h5 {
     margin-bottom: 0.5rem;
   }
 }
 
-.search-rate{
+.search-rate {
   width: 15%;
   margin-right: 10px;
-  select{
+
+  select {
     width: 80%;
   }
 }
 
-@media (max-width: 786px){
+@media (max-width: 786px) {
   .search-age {
     width: 75%;
   }
-  
+
   .search-name {
     width: 75%;
   }
-  
+
   .search-status {
     width: 75%;
   }
