--- a/fe/src/assets/scss/custom/_components.scss
+++ b/fe/src/assets/scss/custom/_components.scss
@@ -19,7 +19,7 @@
 @import "input-group";
 @import "list-group";
 // @import "map";
-// @import "mask";
+@import "mask";
 @import "modal";
 @import "nav";
 @import "navbar";
