--- a/fe/src/app/employee/history/history.component.html
+++ b/fe/src/app/employee/history/history.component.html
@@ -3,16 +3,16 @@
     <div class="header-body">
       <!-- Card stats -->
       <div class="row">
-        <div class="col-xl-6 col-lg-6">
+        <div class="col-xl-9 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
                 <div class="col search-emp">
-                  <!-- <div class="search-name">
+                  <div class="search-name">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Tên đơn dịch vụ</h5>
                     <input #serviceName id="serviceName" placeholder="Booking #1" [(ngModel)]="name" type="text"
                       aria-describedby="serviceName-help" maxlength="50">
-                  </div> -->
+                  </div>
 
                   <div class="search-rate">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Đánh giá</h5>
@@ -21,17 +21,17 @@
                     </select>
                   </div>
 
-                  <!-- <div class="search-rate">
+                  <div class="search-rate">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Loại nhà</h5>
                     <select [(ngModel)]="searchHouseType" id="houseType" aria-describedby="houseType-help"
                       title="Loại nhà">
                       <option *ngFor="let type of houseType" [value]="type">{{ type }}</option>
                     </select>
-                  </div> -->
+                  </div>
 
                   <div class="search-date">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Ngày làm</h5>
-                    <input placeholder="Booking #1" [(ngModel)]="date" type="text"
+                    <input #date id="date" placeholder="Booking #1" [(ngModel)]="date" type="text"
                       aria-describedby="date-help" maxlength="50">
                   </div>
 
@@ -108,6 +108,18 @@
                 <td>
                   {{service.review}}
                 </td>
+                <!-- <td class="text-right">
+                  <div ngbDropdown placement="bottom-right">
+                    <a class="btn btn-sm btn-icon-only text-light" ngbDropdownToggle>
+                      <i class="fas fa-ellipsis-v"></i>
+                    </a>
+                    <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
+                      <a class="dropdown-item" href="/user-profile?cleanerId={{cleaner.cleanerId}}">Xem thông tin</a>
+                      <a class="dropdown-item" (click)="changeStatus()">Đổi trạng thái</a>
+                      <a class="dropdown-item" (click)="removeUser(cleaner.cleanerId)">Xóa</a>
+                    </div>
+                  </div>
+                </td> -->
               </tr>
             </tbody>
           </table>
