--- a/fe/src/app/employee/history/history.component.html
+++ b/fe/src/app/employee/history/history.component.html
@@ -31,7 +31,7 @@
 
                   <div class="search-date">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Ngày làm</h5>
-                    <input #date id="date" placeholder="Booking #1" [(ngModel)]="date" type="text"
+                    <input placeholder="Booking #1" [(ngModel)]="date" type="text"
                       aria-describedby="date-help" maxlength="50">
                   </div>
 
@@ -152,4 +152,4 @@
       </div>
     </div>
   </div>
-</div>
+</div>>
