--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -3,22 +3,37 @@
     <div class="header-body">
       <!-- Card stats -->
       <div class="row">
-        <div class="col-xl-4 col-lg-6">
+        <div class="col-xl-9 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
                 <div class="col search-emp">
                   <div class="search-name">
-                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Mã đơn dịch vụ</h5>
+                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Tên đơn dịch vụ</h5>
                     <input #serviceName id="serviceName" placeholder="Booking #1" [(ngModel)]="name" type="text"
                       aria-describedby="serviceName-help" maxlength="50">
                   </div>
 
-                  <!-- <div class="search-date">
+                  <div class="search-rate">
+                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Đánh giá</h5>
+                    <select [(ngModel)]="searchRate" id="rate" aria-describedby="rate-help" title="đánh giá">
+                      <option *ngFor="let rate of rateRange" [value]="rate">{{ rate }}</option>
+                    </select>
+                  </div>
+
+                  <div class="search-rate">
+                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Loại nhà</h5>
+                    <select [(ngModel)]="searchHouseType" id="houseType" aria-describedby="houseType-help"
+                      title="Loại nhà">
+                      <option *ngFor="let type of houseType" [value]="type">{{ type }}</option>
+                    </select>
+                  </div>
+
+                  <div class="search-date">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Ngày làm</h5>
                     <input placeholder="Booking #1" [(ngModel)]="date" type="text"
                       aria-describedby="date-help" maxlength="50">
-                  </div> -->
+                  </div>
 
                 </div>
 
@@ -43,41 +58,35 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0 font20">Danh sách đơn dịch vụ:</h3>
+          <h3 class="mb-0 font20">Danh sách nhân viên dọn dẹp</h3>
         </div>
         <div class="table-responsive">
-          <div class="showtime-options" *ngFor="let date of dateSchedule">
-            <label> - {{date.name}}: <span>({{date.startTime}} - {{date.endTime}})</span></label>
-            <carousel height="87px" cellsToShow="7" *ngIf="date.workDate && date.workDate.length >= 7">
-              <div [ngClass]="{'selected':selectedDate===showtime}" class="carousel-cell"
-                *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
-                <div class="left">{{getDay(showtime)}}</div>
-                <div class="right"><span>/{{getMonth(showtime)}}
-                  </span><span>{{getDateMonth(showtime)}}</span>
+          <div class="showtime-options">
+            <carousel height="87px" cellsToShow="7" *ngIf="dateList && dateList.length >= 7">
+                <div [ngClass]="{'selected':selectedDate===getYearDateMonth(showtime.data[0].Session_dtmDate_Time)}"
+                    class="carousel-cell" *ngFor="let showtime of dateList"
+                    (click)="getHourList(getYearDateMonth(showtime.data[0].Session_dtmDate_Time))">
+                    <div class="left">{{getDay(showtime.data[0].Session_dtmDate_Time)}}</div>
+                    <div class="right"><span>/{{getMonth(showtime.data[0].Session_dtmDate_Time)}}
+                        </span><span>{{getDateMonth(showtime.data[0].Session_dtmDate_Time)}}</span>
+                    </div>
                 </div>
-              </div>
             </carousel>
-
-            <div class="select-date-container" height="87px" cellsToShow="7"
-              *ngIf="date.workDate && date.workDate.length < 7">
-              <div [ngClass]="{'selected':selectedDate===showtime}" class="datetimeBtn"
-                *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
-                <div class="left">{{getDay(showtime)}}</div>
-                <div class="right"><span>/{{getMonth(showtime)}}
-                  </span><span>{{getDateMonth(showtime)}}</span>
+            <div class="select-date-container" height="87px" cellsToShow="7" *ngIf="dateList && dateList.length < 7">
+                <div [ngClass]="{'selected':selectedDate===getYearDateMonth(showtime.data[0].Session_dtmDate_Time)}"
+                    class="datetimeBtn" *ngFor="let showtime of dateList"
+                    (click)="getHourList(getYearDateMonth(showtime.data[0].Session_dtmDate_Time))">
+                    <div class="left">{{getDay(showtime.data[0].Session_dtmDate_Time)}}</div>
+                    <div class="right"><span>/{{getMonth(showtime.data[0].Session_dtmDate_Time)}}
+                        </span><span>{{getDateMonth(showtime.data[0].Session_dtmDate_Time)}}</span>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+
         </div>
-        <div class="table-responsive" style="margin-top: 2rem;">
-          <div class="showtime-bydate" *ngFor="let date of dateList">
-            <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
-            <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
-            <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
-          </div>
+
         </div>
-        <!-- <div class="card-footer py-4">
+        <div class="card-footer py-4">
           <nav aria-label="...">
             <ul class="pagination justify-content-end mb-0">
               <li class="page-item disabled">
@@ -101,7 +110,7 @@
               </li>
             </ul>
           </nav>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
