--- a/fe/src/app/auth/signup/signup.component.html
+++ b/fe/src/app/auth/signup/signup.component.html
@@ -19,12 +19,6 @@
                 <small>Sign up with</small>
               </div>
               <div class="text-center">
-                <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-                  <span class="btn-inner--icon">
-                    <img src="./assets/img/icons/common/github.svg">
-                  </span>
-                  <span class="btn-inner--text">Github</span>
-                </a>
                 <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
                   <span class="btn-inner--icon">
                     <img src="./assets/img/icons/common/google.svg">
@@ -43,14 +37,14 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                     </div>
-                    <input #account id="account" 
+                    <input  class="form-control" #account id="account" 
                     (keypress)="omit_special_char_email($event)"
                     (blur)="changeHandler('account')" (focus)="focusAccount()"
                     placeholder="name@email.com" type="text" aria-describedby="email-help" maxlength="50"
                     [(ngModel)]="account_name">
                   </div>
                   <div *ngIf="account_name" class="delete" (click)="clearEmail()">
-                    <img style="float: right;" src="assets/img/bnpl/Close.svg" />
+                    <img style="float: right;" src="assets/img/close.svg" />
                   </div>
                     <span *ngIf="password.value && !validatePassword(password.value)" class="error"> Mật khẩu tối thiểu tám ký tự, ít nhất một chữ cái, một số và một ký tự đặc biệt.</span>
 
@@ -58,7 +52,7 @@
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
                   <div class="input-group input-group-alternative mb-3">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-phone"></i></span>
+                      <span class="input-group-text"><i class="fas fa-phone"></i></span>
                     </div>
                     <input class="form-control" placeholder="Phone Number" type="text" (focus)="focus=true" (blur)="focus1=false">
                   </div>
@@ -68,7 +62,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input #email id="email" 
+                    <input  class="form-control" #email id="email" 
                     (keypress)="omit_special_char_email($event)"
                     (blur)="changeHandler('email')" (focus)="focusEmail()"
                     placeholder="name@email.com" type="text" aria-describedby="email-help" maxlength="50"
