--- a/fe/src/app/auth/login/login.component.html
+++ b/fe/src/app/auth/login/login.component.html
@@ -48,7 +48,7 @@
                       type="text" aria-describedby="email-help" maxlength="50" [(ngModel)]="account_name">
                   </div>
                   <div *ngIf="account_name" class="delete" (click)="clearEmail()">
-                    <img style="float: right;" src="assets/img/bnpl/Close.svg" />
+                    <img style="float: right;" src="assets/img/close.svg" />
                   </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
